syntax = "proto3";

package caster;

option go_package = "murmappcaster/proto;casterpb";

message EncryptedTelegramID {
  string telegram_xid = 1;
  bytes encrypted_id = 2;
}
